# spellsolver

./: Cargo.toml  Shuttle.toml  profile  test  test2  test3  test4  test5  words.txt
src/: lib.rs  main.rs  top.rs  trie.rs
templates/: answer.html  index.html
