[package]
name = "spellcast"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
arrayvec = "0.7.6"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.6"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
